internal/scenarios/ficdynamicip/manifests/05-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: scn-fic-route
  namespace: scn-fic-dyn
spec:
  parentRefs:
  - name: scn-fic-gateway
  hostnames:
  - ocibnkctl-fic.local
  rules:
  - matches:
    - path: {type: PathPrefix, value: /}
    backendRefs:
    - name: nginx
      port: 80
